--- a/css/bingo.css
+++ b/css/bingo.css
@@ -1,12 +1,9 @@
-html {background-color: #eee;}
+html { background-color: #eee; }
 body { background: #eee!important;  width: 100%; padding: 1%; }
 .row { width: 100%; }
 .called { background-image: url("/images/bingo.png"); background-size: contain; background-repeat: no-repeat; background-position: center center; border: 1px solid #eee; border-radius: 22px!important; height: calc(8vh); min-height: 110px; text-align: center; background-color: #fff; }
 .called#last-called { position: relative;  margin: 3px 0; height: 220px; }
-.card-deck {
-	padding: 3px 0;
-}
-/*#content { min-height:100vh;}*/
+.card-deck { padding: 3px 0; }
 .controls { color: #a6a6ed; height:95vh; }
 .controls button { position: relative; margin: 0 22px 0 0; font-size: 30px; padding: 1px 11px; color: #a6a6ed; border: 1px solid #a6a6ed; text-transform: uppercase; border-radius: 7px; background-color: #e6e6fa;}
 .host.connected:before { font-family:FontAwesome; content: '\f058'; display:block; font-size: 33px; width: 27px; height: 27px; line-height: 33px; padding: 0; position: absolute; left: -13px; top: -13px; color: #a6a6ed; background-color: #fff; border-radius: 50%; }
